@@ -1,7 +1,7 @@
 /****************************************************************************
  * fs/fs_closedir.c
  *
- *   Copyright (C) 2007-2009, 2011, 2013 Gregory Nutt. All rights reserved.
+ *   Copyright (C) 2007-2009, 2011, 2013-2014 Gregory Nutt. All rights reserved.
  *   Author: Gregory Nutt <gnutt@nuttx.org>
  *
  * Redistribution and use in source and binary forms, with or without
@@ -81,57 +81,68 @@ int closedir(FAR DIR *dirp)
 #endif
   int ret;
 
-  if (!idir || !idir->fd_root)
+  /* Verify that we were provided with a valid directory structure */
+
+  if (!idir)
     {
       ret = EBADF;
       goto errout;
     }
 
-  /* This is the 'root' inode of the directory.  This means different
-   * things wih different filesystems.
+  /* A special case is when we enumerate an "empty", unused inode.  That is
+   * an inode in the pseudo-filesystem that has no operations and no children.
+   * This is a "dangling" directory entry that has lost its childre.
    */
+
+  if (idir->fd_root)
+    {
+      /* This is the 'root' inode of the directory.  This means different
+       * things wih different filesystems.
+       */
 
 #ifndef CONFIG_DISABLE_MOUNTPOINT
-  inode = idir->fd_root;
+      inode = idir->fd_root;
 
-  /* The way that we handle the close operation depends on what kind of root
-   * inode we have open.
-   */
-
-  if (INODE_IS_MOUNTPT(inode) && !DIRENT_ISPSEUDONODE(idir->fd_flags))
-    {
-      /* The node is a file system mointpoint. Verify that the mountpoint
-       * supports the closedir() method (not an error if it does not)
+      /* The way that we handle the close operation depends on what kind of
+       * root inode we have open.
        */
 
-      if (inode->u.i_mops && inode->u.i_mops->closedir)
+      if (INODE_IS_MOUNTPT(inode) && !DIRENT_ISPSEUDONODE(idir->fd_flags))
         {
-          /* Perform the closedir() operation */
+          /* The node is a file system mointpoint. Verify that the
+           * mountpoint supports the closedir() method (not an error if it
+           * does not)
+           */
 
-          ret = inode->u.i_mops->closedir(inode, idir);
-          if (ret < 0)
+          if (inode->u.i_mops && inode->u.i_mops->closedir)
             {
-              ret = -ret;
-              goto errout_with_inode;
+              /* Perform the closedir() operation */
+
+              ret = inode->u.i_mops->closedir(inode, idir);
+              if (ret < 0)
+                {
+                  ret = -ret;
+                  goto errout_with_inode;
+                }
             }
         }
-    }
-  else
+      else
 #endif
-    {
-      /* The node is part of the root pseudo file system, release
-       * our contained reference to the 'next' inode.
-       */
-
-      if (idir->u.pseudo.fd_next)
         {
-          inode_release(idir->u.pseudo.fd_next);
+          /* The node is part of the root pseudo file system, release
+           * our contained reference to the 'next' inode.
+           */
+
+          if (idir->u.pseudo.fd_next)
+            {
+              inode_release(idir->u.pseudo.fd_next);
+            }
         }
+
+      /* Release our references on the contained 'root' inode */
+
+      inode_release(idir->fd_root);
     }
-
-  /* Release our references on the contained 'root' inode */
-
-  inode_release(idir->fd_root);
 
   /* Then release the container */
 
